adding users collection (by Ifeanyi Ojukwu)
